public/stylesheets/style.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

body {
	margin: 0;
	padding: 0;
	font-family: 'Source Sans Pro', arial;
	font-size: 14px;
	color: #222;
	background-color: #e8ebed;
	overflow-y: scroll;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: -moz-none;
	-ms-user-select: none;
	user-select: none;
}

html {
	font-size: 62.5%;	/* so rem-based font sizes look right */
}

.clear {
	clear: both;
}

.clearfix:after {
   clear:both;
   content:' ';
   display:block;
   font-size:0;
   line-height:0;
   visibility:hidden;
   width:0;
   height:0
}

.left {
	float: left;
}

a {
	text-decoration: none;
}

b {
	font-weight: 600;
}

/*----------FONTS----------*/

@font-face {
	font-family: 'broccolidry';
	src:url('../fonts/broccolidry.eot');
	src:url('../fonts/broccolidry.eot?#iefix') format('embedded-opentype'),
		url('../fonts/broccolidry.woff') format('woff'),
		url('../fonts/broccolidry.ttf') format('truetype'),
		url('../fonts/broccolidry.svg#broccolidry') format('svg');
	font-weight: normal;
	font-style: normal;
}

.icon-headphones, .icon-feed {
	font-family: 'broccolidry';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-size: 18px;
	font-variant: normal;
	text-transform: none;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
}

.icon-headphones {
	color: #358CCE;
}

.icon-feed {
	color: #358CCE;
}

.icon-headphones:before {
	content: "\e001";
}
.icon-feed:before {
	content: "\e000";
}

h1 {
	font-size: 80px;
	color: #FFF;
	text-align: center;
	font-weight: 300;
	margin: 0;
	padding: 0;
}

h2 {
	margin: 0px;
	font-weight: 600;
	font-size: 32px;
	margin-bottom: 40px;
	line-height: 32px;
}

h3 {
	font-weight: 400;
	margin: 0px;
	font-size: 18px;
}

h4 {
	font-weight: 400;
	color: #FFF;
	font-size: 16px;
	margin: 0px 0px 20px 0px;
}

h5 {
	font-size: 16px;
	margin: 0px 0px 20px 0px;
	text-transform: uppercase;
	font-weight: 600;
	line-height: 16px;
	padding: 0px;
}

h6 {
	color: #FFF;
	font-size: 15px;
	font-weight: 400;
	margin: 0px;
}


.toggle {
	position: absolute;
	top: -50px;
}

/*----------BUTTONS----------*/

button.btn-std {
	font-family: 'Source Sans Pro', arial;
	-webkit-appearance: none;
	border: none;
	color: #FFF;
	font-weight: 400;
	padding: 0px;
}

button.btn-critical {
	background-color: #358CCE;
}

button.btn-critical:hover {
	background-color: #3999e3;
}

button.btn-critical:active {
	background-color: #2a70a6;
}

button.btn-secondary{
	background-color: #555;
}

button.btn-secondary:hover {
	background-color: #5a5a5a;
}

button.btn-secondary:active {
	background-color: #4a4a4a;
}

button.btn-toggle:nth-child(1) {
	border-radius: 3px 0px 0px 3px;
}

button.btn-toggle:nth-last-child(1) {
	border-radius: 0px 3px 3px 0px;
}

.cats {
	margin-bottom: 10px;
}

.toggle button.off:active {
	background-color: #333;
}
.toggle button.on:active {
	background-color: #555;
}


button.btn-std:off {
}

button.btn-toggle {
	background-color: #f8f8f8;
	display: block;
	border-radius: 3px;
	height: 36px;
	width: 90px;
	float: left;
	color: #222;
	font-size: 13px;
}

button.btn-toggle.on {
	outline: none;
	background-color: #555;
	color: #FFF;
}

button.btn-lg {
	font-size: 28px;
	height: 70px;
	width: 240px;
}

button.btn-start {
	margin: 50px auto 0px auto;
	border-radius: 4px;
	display: block;
}

button.publish {
	float: right;
	height: 30px;
	width: 90px;
	font-size: 16px;
	cursor: pointer;
	border-radius: 3px;
	margin: 10px 10px 0px 0px;
}

button.new {
	float: right;
	height: 30px;
	width: 90px;
	font-size: 16px;
	cursor: pointer;
	background-color: #ff7b00;
	margin: 10px 10px 0px 0px;
	border-radius: 3px;
}

button.new:hover {
	background-color: #fc8c24;
}

button.new:active {
	background-color: #e67103;
}

.publish-url {
	display: block;
	position: absolute;
	text-align: right;
	top: -75px;
  right: 0px;
	height: 40px;
	width: 500px;
	line-height: 40px;
	font-size: 15px;
	color: #ccc;

	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

button.btn-img {
	height: 25px;
	width: 25px;
	padding: 0px;
	border: none;
	border-radius: 2px;
	vertical-align: middle;
	background-color: #555;
	background-image: url(../images/image.png);
	background-position: center;
	background-repeat: no-repeat;
}

button.btn-add {
	height: 30px;
	width: 26px;
	border: none;
	padding: 0px;
	background-color: #31353C;
	color: #FFF;
	font-size: 13px;
	cursor: pointer;
	background-image: url(../images/add-card.png);
	background-position: center;
	background-repeat: no-repeat;
	float: left;
	margin-top: 20px;
}

button.btn-done {
	width: 160px;
	font-size: 16px;
	border-radius: 4px;
	height: 40px;
	margin-top: 10px;
}

button.small-btn {
	width: 36px;
	height: 36px;
	border-radius: 3px;
	background-repeat: no-repeat;
	background-position: center;
	position: absolute;
	background-color: #f8f8f8;
	-webkit-appearance: none;
	color: #222;
	font-size: 13px;
	border: 1px solid #CCC;
	box-sizing:border-box;
	-moz-box-sizing:border-box; /* Firefox */
}

button.log-toggle {
	background-image: url(../images/log.png);
}

.selected:hover button.customize-btn,
.selected:hover button.delete-btn {
 display: block;
}

.component:hover .handle,
.component:hover .component-menu {
  display: block;
}

.ui-sortable-helper .channel-visualisation,
.ui-sortable-helper .editables-section,
.ui-sortable-helper .customize-btn {
  display: none !important;
}

.handle
 {
  background-size: 10px;
	position: absolute;
	z-index: 110;
	height: 22px;
	width: 22px;
	background-position: center;
  background-color: transparent;
	background-repeat: no-repeat;
  background-size: 12px;
  cursor: pointer;
  opacity: .6;
  border-radius: 2px;
  background-color: white;
  border: solid 1px #BBB;
  display: none;
}

.handle:hover
 {
  opacity: 1;
}
/* ... */

